backend de planes y pagos

--- a/TravelingColombia/Views/Informe/Reserva.cshtml
+++ b/TravelingColombia/Views/Informe/Reserva.cshtml
@@ -83,7 +83,7 @@
                                     <td class="px-4 py-2 border">Viaje</td>
                                     <td class="px-4 py-2 border">$@item.IdViajeNavigation?.PrecioViaje</td>
                                 }
-                                <td class="px-4 py-2 border">@item.EstadoReservaNavigation?.Estado1</td>
+                                <td class="px-4 py-2 border">@item.IdEstadoReservaNavigation?.Estado1</td>
                             </tr>
                         }
                         
