--- a/TravelingColombia/Views/Informe/Viaje.cshtml
+++ b/TravelingColombia/Views/Informe/Viaje.cshtml
@@ -93,14 +93,14 @@
 
                                 <td class="px-4 py-2 border">@item.IdViaje</td>
                                 <td class="px-4 py-2 border">@item.Imagen</td>
-                                <td class="px-4 py-2 border">@item.IdDestinoNavigation?.NombreDestino</td>
+                                <td class="px-4 py-2 border">@item.IdDestinoIdaNavigation?.NombreDestino</td>
                                 <td class="px-4 py-2 border">@item.HoraSalida</td>
                                 <td class="px-4 py-2 border">@item.HoraLlegada</td>
                                 <td class="px-4 py-2 border">@item.FechaViaje</td>
                                 <td class="px-4 py-2 border">$@item.PrecioViaje</td>
                                 <td class="px-4 py-2 border">@item.CantidadPuestos</td>
                                 <td class="px-4 py-2 border">@item.IdAerolineaNavigation?.NombreAerolinea</td>
-                                <td class="px-4 py-2 border">@item.IdClaseNavigation?.NombreClase</td>
+                                <td class="px-4 py-2 border">@item.IdAerolineaNavigation?.NombreAerolinea</td>
                             </tr>
                         }
 
