--- a/TravelingColombia/Views/Informe/Pago.cshtml
+++ b/TravelingColombia/Views/Informe/Pago.cshtml
@@ -1,3 +1,5 @@
+@model List<TravelingColombia.ViewModels.PagosViewModel>
+
 <div class="min-h-screen bg-gradient-to-b  flex flex-col items-center p-6 space-y-6">
 
     <!-- Contenedor de Reservas -->
@@ -8,12 +10,12 @@
                 class="relative bottom-18  text-2xl w-[900px] h-[60px] rounded-full  border left-60 bg-white font-bold text-center pt-2">
                 Gestion de Pagos</h2>
             <!-- Formulario -->
-            <form class="flex flex-wrap gap-x-10 gap-y-5 w-full p-6 bg-white rounded-xl shadow-lg">
+            <form asp-action="Pago" asp-controller="Informe" method="post" class="flex flex-wrap gap-x-10 gap-y-5 w-full p-6 bg-white rounded-xl shadow-lg">
 
                 <!-- Campos personalizados -->
                 <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Nombre</label>
-                    <input type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
+                    <label class="mb-1 font-semibold text-gray-700">Buscar</label>
+                    <input type="text" name="filtro" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
                 </div>
 
                 <div class="flex flex-col flex-1 min-w-[200px]">
@@ -59,22 +61,26 @@
                     <thead>
                         <tr class="bg-[#3085BC] text-white text-sm sm:text-base">
                             <th class="px-4 py-2 border">Usuario</th>
-                            <th class="px-4 py-2 border">metodo de pago</th>
-                            <th class="px-4 py-2 border">Fecha de pago</th>
-                            <th class="px-4 py-2 border">tipo de reserva</th>
+                            <th class="px-4 py-2 border">Cedula</th>
+                            <th class="px-4 py-2 border">Banco</th>
+                            <th class="px-4 py-2 border">Cuenta</th>
+                            <th class="px-4 py-2 border">Metodo</th>
                             <th class="px-4 py-2 border">Monto</th>
-                            <th class="px-4 py-2 border">Estado</th>
+                            
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="text-sm sm:text-base hover:bg-[#3085BC]/30 transition">
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
-                            <td class="px-4 py-2 border"></td>
+                        @foreach(var item in Model){
+                            <tr class="text-sm sm:text-base hover:bg-[#3085BC]/30 transition">
+                            <td class="px-4 py-2 border">@item.NombreUsuario</td>
+                            <td class="px-4 py-2 border">@item.CedulaUsuario</td>
+                            <td class="px-4 py-2 border">@item.NombreBanco</td>
+                            <td class="px-4 py-2 border">@item.CuentaBanco</td>
+                            <td class="px-4 py-2 border">@item.MetodoPago</td>
+                            <td class="px-4 py-2 border">$@item.Monto</td>
+                            
                         </tr>
+                        }
 
 
 
