--- a/TravelingColombia/Views/Informe/Plan.cshtml
+++ b/TravelingColombia/Views/Informe/Plan.cshtml
@@ -1,5 +1,4 @@
-@model IEnumerable<TravelingColombia.Models.Plane>
-
+@model TravelingColombia.ViewModels.PlanesViewModel
 
 <div class="min-h-screen bg-gradient-to-b  flex flex-col items-center p-6 space-y-6">
 
@@ -11,44 +10,47 @@
                 class="relative bottom-18  text-2xl w-[900px] h-[60px] rounded-full  border left-60 bg-white font-bold text-center pt-2">
                 Gestion de Planes</h2>
             <!-- Formulario -->
-            <form class="flex flex-wrap gap-x-10 gap-y-5 w-full p-6 bg-white rounded-xl shadow-lg">
+            <form method="post" asp-action="Plan" asp-controller="Informe" class="flex flex-wrap gap-x-10 gap-y-5 w-full p-6 bg-white rounded-xl shadow-lg">
 
                 <!-- Campos personalizados -->
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Nombre</label>
-                    <input type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
+                    <input name="NombreDestino" type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Plan</label>
-                    <select class="p-2 rounded-lg border border-gray-300">
-                        <option value="">Seleccione Plan</option>
-                        <option value="1">1</option>
-                    </select>
+                    <input name="NombrePlan" type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Tipo</label>
-                    <select class="p-2 rounded-lg border border-gray-300">
-                        <option value="">Seleccione Tipo</option>
-                        <option value="1">1</option>
+                     <select name="IdTipoPlan" class="p-2 rounded-lg border border-gray-300">
+                     <option value="">Seleccione Tipo</option>
+                    @foreach (var tipoplan in Model.ListadoTipoPlanes)
+                    {
+                       
+                            
+                            <option value="@tipoplan.IdTipoPlan">@tipoplan.NombrePlan</option>
+                        
+                    }
                     </select>
                 </div>
 
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Fecha Mínima</label>
-                    <input type="date" class="p-2 rounded-lg border border-gray-300" />
+                    <input name="FechaMin" type="date" class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Fecha Máxima</label>
-                    <input type="date" class="p-2 rounded-lg border border-gray-300" />
+                    <input name="FechaMax" type="date" class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Precio Mínimo</label>
-                    <input type="number" placeholder="Ingrese precio mínimo"
+                    <input name="PrecioMin" type="number" placeholder="Ingrese precio mínimo"
                         class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Precio Máximo</label>
-                    <input type="number" placeholder="Ingrese precio máximo"
+                    <input name="PrecioMax" type="number" placeholder="Ingrese precio máximo"
                         class="p-2 rounded-lg border border-gray-300" />
                 </div>
 
@@ -67,30 +69,44 @@
                 <table class="min-w-[700px] w-full  border-collapse table-auto">
                     <thead>
                         <tr class="bg-[#3085BC] text-white text-sm sm:text-base">
-                            <th class="px-4 py-2 border">Id Plan</th>
-                            <th class="px-4 py-2 border">Imagen</th>
+                            <th class="px-4 py-2 border">Destino</th>
+                            <th class="px-4 py-2 border">País</th>
                             <th class="px-4 py-2 border">Plan</th>
-                            <th class="px-4 py-2 border">Usuario</th>
-                            <th class="px-4 py-2 border">Descripcion</th>
-                            <th class="px-4 py-2 border">Aerolínea</th>
-                            <th class="px-4 py-2 border">Hotel</th>
+                            <th class="px-4 py-2 border">Fecha Ida</th>
+                            <th class="px-4 py-2 border">Fecha Regreso</th>
+                            <th class="px-4 py-2 border">Tipo</th>
+                            <th class="px-4 py-2 border">Descripción</th>
+                            <th class="px-4 py-2 border">Personas</th>
+                            <th class="px-4 py-2 border">Imagen</th>
                             <th class="px-4 py-2 border">Precio</th>
+                            <th class="px-4 py-2 border">Hotel</th>
+                            <th class="px-4 py-2 border">Aerolínea</th>
                         </tr>
+
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+
+                        @foreach (var plan in Model.ListadoPlanes)
                         {
-                            <tr class="text-sm sm:text-base hover:bg-[#3085BC]/30 transition">
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
-                                <td class="px-4 py-2 border">@item</td>
+                            <tr class="hover:bg-gray-50">
+                                <td class="px-4 py-2 border">@plan.DestinoIda</td>
+                                <td class="px-4 py-2 border">@plan.Pais</td>
+                                <td class="px-4 py-2 border">@plan.NombrePlan</td>
+                                <td class="px-4 py-2 border">@plan.FechaIda</td>
+                                <td class="px-4 py-2 border">@plan.FechaRegreso</td>
+                                <td class="px-4 py-2 border">@plan.TipoPlan</td>
+                                <td class="px-4 py-2 border">@plan.Descripcion</td>
+                                <td class="px-4 py-2 border">@plan.CantidadPersonas</td>
+                                <td class="px-4 py-2 border">
+                                    <img src="@plan.Imagen" alt="Imagen del plan"
+                                        class="w-16 h-16 object-cover rounded-md" />
+                                </td>
+                                <td class="px-4 py-2 border">$@plan.PrecioPlan</td>
+                                <td class="px-4 py-2 border">@plan.Hotel</td>
+                                <td class="px-4 py-2 border">@plan.Aerolinea</td>
                             </tr>
                         }
+
                     </tbody>
                 </table>
             </div>
