--- a/TravelingColombia/Views/Informe/Reserva.cshtml
+++ b/TravelingColombia/Views/Informe/Reserva.cshtml
@@ -74,16 +74,9 @@
                                 <td class="px-4 py-2 border">@item.IdReserva</td>
                                 <td class="px-4 py-2 border">@($"{item.IdUsuarioNavigation?.NombreUsuario} {item.IdUsuarioNavigation?.ApellidoUsuario}")</td>
                                 <td class="px-4 py-2 border">@item.FechaReserva</td>
-                                @if(@item.IdPlan!=null)
-                                {
-                                    <td class="px-4 py-2 border">Plan</td>
-                                    <td class="px-4 py-2 border">$@item.IdPlanNavigation?.PrecioPlan</td>
-
-                                }else{
-                                    <td class="px-4 py-2 border">Viaje</td>
-                                    <td class="px-4 py-2 border">$@item.IdViajeNavigation?.PrecioViaje</td>
-                                }
-                                <td class="px-4 py-2 border">@item.EstadoReservaNavigation?.Estado1</td>
+                                <td class="px-4 py-2 border">@(item.IdPlan != null ? "Plan" : "Viaje")</td>
+                                <td class="px-4 py-2 border">@(item.IdPlan != null ? item.IdPlanNavigation?.PrecioPlan : item.IdViajeNavigation?.PrecioViaje)</td>
+                                <td class="px-4 py-2 border">@item.IdEstadoReservaNavigation?.Estado1</td>
                             </tr>
                         }
                         
