se actualizo el fomulario de planes

--- a/TravelingColombia/Views/Informe/Plan.cshtml
+++ b/TravelingColombia/Views/Informe/Plan.cshtml
@@ -36,23 +36,16 @@
                 </div>
 
                 <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Fecha Mínima</label>
-                    <input name="FechaMin" type="date" class="p-2 rounded-lg border border-gray-300" />
+                    <label class="mb-1 font-semibold text-gray-700">Fecha </label>
+                    <input name="Fecha" type="date" class="p-2 rounded-lg border border-gray-300" />
                 </div>
+                
                 <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Fecha Máxima</label>
-                    <input name="FechaMax" type="date" class="p-2 rounded-lg border border-gray-300" />
-                </div>
-                <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Precio Mínimo</label>
-                    <input name="PrecioMin" type="number" placeholder="Ingrese precio mínimo"
+                    <label class="mb-1 font-semibold text-gray-700">Precio</label>
+                    <input name="Precio" type="number" placeholder="Ingrese precio mínimo"
                         class="p-2 rounded-lg border border-gray-300" />
                 </div>
-                <div class="flex flex-col flex-1 min-w-[200px]">
-                    <label class="mb-1 font-semibold text-gray-700">Precio Máximo</label>
-                    <input name="PrecioMax" type="number" placeholder="Ingrese precio máximo"
-                        class="p-2 rounded-lg border border-gray-300" />
-                </div>
+                
 
                 <!-- Botón buscar -->
                 <div class="flex justify-center w-full mt-4">
