--- a/TravelingColombia/Views/Informe/Plan.cshtml
+++ b/TravelingColombia/Views/Informe/Plan.cshtml
@@ -51,7 +51,7 @@
                 <div class="flex justify-center w-full mt-4">
                     <button type="submit"
                         class="bg-[#3085BC] hover:bg-[#3084bcd2] text-white font-bold py-3 px-8 rounded-full transition duration-300">
-                        Buscar
+                        Listar
                     </button>
                 </div>
             </form>
