--- a/TravelingColombia/Views/Informe/Pago.cshtml
+++ b/TravelingColombia/Views/Informe/Pago.cshtml
@@ -15,11 +15,11 @@
                 <!-- Campos personalizados -->
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Cedula</label>
-                    <input name="Cedula" type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
+                    <input name="Cedula" type="text" placeholder="Ingrese Cedula" class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Cuenta</label>
-                    <input name="Cuenta" type="text" placeholder="Ingrese nombre" class="p-2 rounded-lg border border-gray-300" />
+                    <input name="Cuenta" type="text" placeholder="Ingrese Cuenta" class="p-2 rounded-lg border border-gray-300" />
                 </div>
 
                 <div class="flex flex-col flex-1 min-w-[200px]">
@@ -45,7 +45,7 @@
                 
                 <div class="flex flex-col flex-1 min-w-[200px]">
                     <label class="mb-1 font-semibold text-gray-700">Monto</label>
-                    <input name="Monto" type="number" placeholder="Ingrese precio mínimo"
+                    <input name="Monto" type="number" placeholder="Ingrese precio"
                         class="p-2 rounded-lg border border-gray-300" />
                 </div>
                 
