cambio de botones

--- a/TravelingColombia/Views/Shared/_Layout.cshtml
+++ b/TravelingColombia/Views/Shared/_Layout.cshtml
@@ -56,10 +56,10 @@
                         </button>
                         <div id="teamsMenu" class="mt-1 ml-6 hidden space-y-1 text-black">
                             <div class="cursor-pointer hover:text-white">Usuarios</div>
-                            <div><a asp-action="Index" asp-controller="Viaje" class="cursor-pointer hover:text-white">Viajes</a></div>
-                            <div><a asp-action="Index" asp-controller="Plan" class="cursor-pointer hover:text-white">Planes</a></div>
-                            <div><a asp-action="Index" asp-controller="Pago" class="cursor-pointer hover:text-white">Pagos</a></div>
-                            <div><a asp-action="Index" asp-controller="Reserva" class="cursor-pointer hover:text-white">Reservas</a></div>
+                            <div><a asp-action="Viaje" asp-controller="Informe" class="cursor-pointer hover:text-white">Viajes</a></div>
+                            <div><a asp-action="Plan" asp-controller="Informe" class="cursor-pointer hover:text-white">Planes</a></div>
+                            <div><a asp-action="Pago" asp-controller="Informe" class="cursor-pointer hover:text-white">Pagos</a></div>
+                            <div><a asp-action="Reserva" asp-controller="Informe" class="cursor-pointer hover:text-white">Reservas</a></div>
                         </div>
                     </div>
                     <div  class="cursor-pointer rounded px-4 py-2 text-black hover:text-white">
